Add tests for support

--- a/tests/config/clusters/cluster1/cluster.yaml
+++ b/tests/config/clusters/cluster1/cluster.yaml
@@ -1,5 +1,8 @@
 name: cluster1
 provider: gcp
+support:
+  helm_chart_values_files:
+    - support.values.yaml
 hubs:
   - name: hub1
     helm_chart_values_files:
