Unbreak the other workflow

--- a/.github/workflows/helm-upgrade-decision-logic.yaml
+++ b/.github/workflows/helm-upgrade-decision-logic.yaml
@@ -57,4 +57,5 @@ jobs:
 
       - name: Run python script with pretty-print
         run: |
-          python helm_upgrade_decision_logic.py "${{ steps.changed-files.outputs.added_modified }}" --pretty-print
+          # I know, I'm writing the worst Python ever here. I'm just fudging things to get all the workflows running.
+          python -m mymodule.helm_upgrade_decision_logic "${{ steps.changed-files.outputs.added_modified }}" --pretty-print
