--- a/.github/workflows/helm-upgrade-decision-logic.yaml
+++ b/.github/workflows/helm-upgrade-decision-logic.yaml
@@ -45,7 +45,8 @@ jobs:
 
       - name: Run python script
         run: |
-          python helm_upgrade_decision_logic.py "${{ steps.changed-files.outputs.added_modified }}"
+          # I know, I'm writing the worst Python ever here. I'm just fudging things to get all the workflows running.
+          python -m mymodule.helm_upgrade_decision_logic "${{ steps.changed-files.outputs.added_modified }}"
 
       - name: Echo hub matrix jobs
         run: |
