--- a/.github/workflows/test-deployer.yaml
+++ b/.github/workflows/test-deployer.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install -U pip
-          python -m pip install pyyaml pytest coverage rich
+          python -m pip install pyyaml pytest coverage rich pytest-env
       - name: Run tests
         run: |
           python -m coverage run -m pytest -vvv
