--- a/.github/workflows/helm-upgrade-decision-logic.yaml
+++ b/.github/workflows/helm-upgrade-decision-logic.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - "**.values.yaml"
+      - "**values.yaml"
       - "**cluster.yaml"
       - "helm-charts/basehub/**"
       - "helm-charts/daskhub/**"
@@ -15,7 +15,7 @@ on:
     branches:
       - main
     paths:
-      - "**.values.yaml"
+      - "**values.yaml"
       - "**cluster.yaml"
       - "helm-charts/basehub/**"
       - "helm-charts/daskhub/**"
