--- a/.github/workflows/helm-upgrade-decision-logic.yaml
+++ b/.github/workflows/helm-upgrade-decision-logic.yaml
@@ -35,7 +35,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install ruamel rich
+          python -m pip install ruamel.yaml rich
 
       - uses: jitterbit/get-changed-files@v1
         id: changed-files
