--- a/.github/workflows/test-deployer.yaml
+++ b/.github/workflows/test-deployer.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install -U pip
-          python -m pip install ruamel pytest coverage rich pytest-env
+          python -m pip install ruamel.yaml pytest coverage rich pytest-env
       - name: Run tests
         run: |
           python -m coverage run -m pytest -vvv
