--- a/.github/workflows/test-deployer.yaml
+++ b/.github/workflows/test-deployer.yaml
@@ -25,10 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install -U pip
-          python -m pip install ruamel.yaml pytest coverage rich pytest-env
+          python -m pip install ruamel.yaml rich pytest pytest-env
       - name: Run tests
         run: |
-          python -m coverage run -m pytest -vvv
-      - name: Print coverage report
-        run: |
-          coverage report
+          python -m pytest -vvv --color=yes
