Update trigger paths in GitHub Action workflow

--- a/.github/workflows/helm-upgrade-decision-logic.yaml
+++ b/.github/workflows/helm-upgrade-decision-logic.yaml
@@ -5,23 +5,13 @@ on:
     branches:
       - main
     paths:
-      - "**values.yaml"
-      - "**cluster.yaml"
-      - "helm-charts/basehub/**"
-      - "helm-charts/daskhub/**"
-      - "helm-charts/support/**"
-      - ".github/workflows/**"
+      - "**.yaml"
       - "mymodule/**"
   pull_request:
     branches:
       - main
     paths:
-      - "**values.yaml"
-      - "**cluster.yaml"
-      - "helm-charts/basehub/**"
-      - "helm-charts/daskhub/**"
-      - "helm-charts/support/**"
-      - ".github/workflows/**"
+      - "**.yaml"
       - "mymodule/**"
 
 jobs:
