--- a/.github/workflows/test-deployer.yaml
+++ b/.github/workflows/test-deployer.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install -U pip
-          python -m pip install ruamel.yaml rich pytest pytest-env
+          python -m pip install ruamel.yaml rich pytest
       - name: Run tests
         run: |
           python -m pytest -vvv --color=yes
