Update path triggers for testing code

--- a/.github/workflows/test-deployer.yaml
+++ b/.github/workflows/test-deployer.yaml
@@ -5,13 +5,13 @@ on:
     branches:
       - main
     paths:
-      - "**.py"
+      - "mymodule/**"
       - "tests/**"
   pull_request:
     branches:
       - main
     paths:
-      - "**.py"
+      - "mymodule/**"
       - "tests/**"
 
 jobs:
