--- a/.github/workflows/helm-upgrade-decision-logic.yaml
+++ b/.github/workflows/helm-upgrade-decision-logic.yaml
@@ -4,15 +4,15 @@ on:
   push:
     branches:
       - main
-    paths:
-      - "**/*.yaml"
-      - "mymodule/**"
+    # paths:
+    #   - "**/*.yaml"
+    #   - "mymodule/**"
   pull_request:
     branches:
       - main
-    paths:
-      - "**/*.yaml"
-      - "mymodule/**"
+    # paths:
+    #   - "**/*.yaml"
+    #   - "mymodule/**"
 
 jobs:
   generate-jobs:
