--- a/.github/workflows/helm-upgrade-decision-logic.yaml
+++ b/.github/workflows/helm-upgrade-decision-logic.yaml
@@ -64,15 +64,15 @@ jobs:
           echo "Upgrade Support?: ${{ matrix.jobs.upgrade_support }}"
           echo "Upgrade Staging?: ${{ matrix.jobs.upgrade_staging }}"
 
-  # hub-jobs:
-  #   runs-on: ubuntu-latest
-  #   needs: [generate-jobs, support-staging-jobs]
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       jobs: ${{ needs.generate-jobs.outputs.prod-hub-matrix-jobs }}
-  #   steps:
-  #     - run: |
-  #         echo "Provider: ${{ matrix.jobs.provider }}"
-  #         echo "Cluster name: ${{ matrix.jobs.cluster_name }}"
-  #         echo "Hub name: ${{ matrix.jobs.hub_name }}"
+  hub-jobs:
+    runs-on: ubuntu-latest
+    needs: [generate-jobs, support-staging-jobs]
+    strategy:
+      fail-fast: false
+      matrix:
+        jobs: ${{ fromJson(needs.generate-jobs.outputs.prod-hub-matrix-jobs) }}
+    steps:
+      - run: |
+          echo "Provider: ${{ matrix.jobs.provider }}"
+          echo "Cluster name: ${{ matrix.jobs.cluster_name }}"
+          echo "Hub name: ${{ matrix.jobs.hub_name }}"
