--- a/.github/workflows/helm-upgrade-decision-logic.yaml
+++ b/.github/workflows/helm-upgrade-decision-logic.yaml
@@ -57,6 +57,10 @@ jobs:
   upgrade-support:
     runs-on: ubuntu-latest
     needs: [generate-jobs]
+    if: |
+      (github.event_name ='push' && contains(github.ref, 'main')) &&
+      needs.generate-jobs.result == 'success' &&
+      needs.generate-jobs.outputs.support-matrix-jobs != '[]'
     strategy:
       fail-fast: false
       matrix:
@@ -70,6 +74,11 @@ jobs:
   upgrade-staging:
     runs-on: ubuntu-latest
     needs: [generate-jobs, upgrade-support]
+    if: |
+      !cancelled() &&
+      (github.event_name == 'push' && contains(github.ref, 'main')) &&
+      needs.generate-jobs.result == 'success' &&
+      needs.generate-jobs.outputs.staging-hub-matrix-jobs != '[]'
     strategy:
       fail-fast: false
       matrix:
@@ -82,7 +91,12 @@ jobs:
 
   upgrade-prod:
     runs-on: ubuntu-latest
-    needs: [generate-jobs, upgrade-support, upgrade-staging]
+    needs: [generate-jobs, upgrade-staging]
+    if: |
+      !cancelled() &&
+      (github.event_name == 'push' && contains(github.ref, 'main')) &&
+      needs.generate-jobs.result == 'success' &&
+      (needs.generate-jobs.outputs.prod-hub-matrix-jobs != '[]'
     strategy:
       fail-fast: false
       matrix:
