--- a/.github/workflows/helm-upgrade-decision-logic.yaml
+++ b/.github/workflows/helm-upgrade-decision-logic.yaml
@@ -96,7 +96,7 @@ jobs:
       !cancelled() &&
       (github.event_name == 'push' && contains(github.ref, 'main')) &&
       needs.generate-jobs.result == 'success' &&
-      (needs.generate-jobs.outputs.prod-hub-matrix-jobs != '[]'
+      needs.generate-jobs.outputs.prod-hub-matrix-jobs != '[]'
     strategy:
       fail-fast: false
       matrix:
