--- a/.github/workflows/helm-upgrade-decision-logic.yaml
+++ b/.github/workflows/helm-upgrade-decision-logic.yaml
@@ -58,9 +58,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: [generate-jobs]
     if: |
+      !cancelled() &&
       (github.event_name == 'push' && contains(github.ref, 'main')) &&
       needs.generate-jobs.result == 'success' &&
-      needs.generate-jobs.outputs.support-matrix-jobs != '[]'
+      needs.generate-jobs.outputs.support-matrix-jobs != ''
     strategy:
       fail-fast: false
       matrix:
@@ -78,7 +79,7 @@ jobs:
       !cancelled() &&
       (github.event_name == 'push' && contains(github.ref, 'main')) &&
       needs.generate-jobs.result == 'success' &&
-      needs.generate-jobs.outputs.staging-hub-matrix-jobs != '[]'
+      needs.generate-jobs.outputs.staging-hub-matrix-jobs != ''
     strategy:
       fail-fast: false
       matrix:
@@ -96,7 +97,7 @@ jobs:
       !cancelled() &&
       (github.event_name == 'push' && contains(github.ref, 'main')) &&
       needs.generate-jobs.result == 'success' &&
-      needs.generate-jobs.outputs.prod-hub-matrix-jobs != '[]'
+      needs.generate-jobs.outputs.prod-hub-matrix-jobs != ''
     strategy:
       fail-fast: false
       matrix:
