Add a staging hub to 2i2c cluster

--- a/config/clusters/2i2c/cluster.yaml
+++ b/config/clusters/2i2c/cluster.yaml
@@ -4,6 +4,9 @@ support:
   helm_chart_values_files:
     - support.values.yaml
 hubs:
+  - name: staging
+    helm_chart_values_files:
+      - staging.values.yaml
   - name: anu
     helm_chart_values_files:
       - anu.values.yaml
