--- a/.github/workflows/helm-upgrade-decision-logic.yaml
+++ b/.github/workflows/helm-upgrade-decision-logic.yaml
@@ -47,7 +47,7 @@ jobs:
       - id: generated-jobs
         run: |
           # I know, I'm writing the worst Python ever here. I'm just fudging things to get all the workflows running.
-          python -m mymodule.helm_upgrade_decision_logic "${{ steps.changed-files.outputs.changed_files }}"
+          python -m mymodule.helm_upgrade_decision_logic "${{ steps.changed-files.outputs.changed }}"
 
       - name: Run python script with pretty-print
         run: |
